tests/errors/while-let-enum-ref-mut-temporary.ari
enum MaybeWide {
  Empty,
  Full(i64),
}

fn make() -> MaybeWide {
  return Full(1);
}

fn main() -> i64 {
  while let Full(ref mut value) = make() {
    return 1;
  }
  return 0;
}
